# clearsysmsg

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  clearsysmsg.service  docker-compose.yaml  install_service.sh
.github/workflows/: CI.yml  docker-image.yml  rust-clippy.yml
src/: main.rs
