[package]
name = "clearsysmsg"
version = "0.1.0"
edition = "2024"
authors = ["Henning Kind Leth <leth.henning@proton.me>"]
license = "GPLv3"


[dependencies]
log = "0.4.27"
pretty_env_logger = "0.5.0"
sha256 = "1.6.0"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
